Add create contact endpoint
